--- a/help.html
+++ b/help.html
@@ -82,7 +82,7 @@
 	<b>~ (tilda)</b> - hide popup (refocus + refresh snapshot of web page, restores text selection vibrant. Alternative: right click close X of popup)<br/>
 	<b>enter</b> - <img src="img/crosshair.png" width="19"/> pick color, toggle pick mode (arrows and mouse currently incompatible)<br/>
 	
-	<br/><br/>This software is beta and is provided as is, please provide feedback for improvements at <a href="http://vidsbee.com/Contact/">vidsbee.com/Contact</a>  Thanks!
+	<br/><br/>This software is beta and is provided as is, please provide feedback for improvements at <a href="https://github.com/mrfanii/ColorPick-Eyedropper-V3/issues">github.com/mrfanii/ColorPick-Eyedropper-V3/issues</a> Thanks!
 </div>
 
 
